src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
  monospace;
}

.comparatorArea{
  display: flex;
  justify-content: space-between;
  box-sizing: border-box;
  height: 100vh;
  margin: 0 auto;
  width: 1400px;
  padding: 5px 8px 5px 8px;
  background-color: #50565d;
}

@media (max-width: 1399px){
  .comparatorArea{
    width: 100vw;
  }
}

@media (max-width: 710px){
  .comparatorArea{
    width: 710px;
  }
}

.comparatorArea__half{
  display: flex;
  flex-direction: column;
  flex-basis: 50%;
}

.comparatorArea__half:nth-child(1){
  margin-right: 6px;
}

.timeArea{
  font-weight: bold;
  font-size: 15px;
  padding-left: 7px;
  color: #c6ced4;
}

.absent {
  color: #e10b04
}

.modified {
  color: #e8dc33;
}

.new {
  color: #24aa0a;
}

.toggle-off{
  margin-left: 16px;
}

.css-7t1nxl{
  overflow: auto;
}

.css-79elbk div{
  display: flex;
  cursor:pointer;
}

.comparator{
  display: block;
  flex-basis: 50%;
}

.left{
  background-color: #b1f3ff;
}

.right{
  background-color: #ffdc92;
}

